--- a/login.css
+++ b/login.css
@@ -1,9 +1,17 @@
-.container {
-    width: 30%;
-    margin-top: 9%;
-    box-shadow: 0 3px 20px rgba(0,0,0,0.3);
-    padding: 40px;
+body {
+  min-height: 2000px;
 }
-button {
-    width: 48%;
+
+.jumbotron {
+  padding-top: 6rem;
+  background-color: #e5989b;
+}
+
+#projects {
+  background-color: #e5989b;
+}
+#boxes {
+}
+section {
+  padding-top: 5rem;
 }
